# pyxdaq

./: .gitignore  .prettierrc  .pylintrc  .style.yapf  README.md  pyproject.toml  tox.ini
.github/workflows/: build_package.yml  build_self_diagnosis.yml  publish.yml  publish_to_test.yml  run_tests.yml
benchmarks/: parsing.py
bitfiles/: xr7310a75.bit
config/: isa_rhd.json  isa_rhs.json  reg_rhs.json
examples/: README.md  impedance_test_analysis.py  manual_stim.py  plating.py  plot_stim.py  read_OEdata.py  realtime_process.py  realtime_stimulation.py  record_in_openephys_format.py  run_impedance_measurements.py  ttl_output_control.py
exmaples/: impedance_test_analysis.py  plating.py  plot_stim.py
pyxdaq/: __init__.py  board.py  constants.py  datablock.py  gen2.py  impedance.py  intan_headstage.py  legacy.py  openephys.py  register.py  rhd_driver.py  rhs_driver.py  stim.py  stream.py  utils.py  writer.py  xdaq.py
pyxdaq/okFrontPanel/: __init__.py  _ok.pyd  libokFrontPanel.dylib  ok.py
pyxdaq/resources/: __init__.py
pyxdaq/resources/bitfiles/: xsr7310a75.bit
pyxdaq/resources/config/: reg_rhs.json
pyxdaq/tools/: hardware_detect.py  self_diagnosis.py
scripts/: self_diagnosis.py
tests/: test_package.py  test_parsing.py
