[project]
name = "pyxdaq"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "dataclass_wizard",
    "pytest",
    "numpy",
    "rich",
    "tqdm",
    "matplotlib",
    "tox",
]

[tool.setuptools.packages.find]
include = ["pyxdaq", "pyxdaq.*"]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pyxdaq.okFrontPanel" = ["*.dll", "*.so", "*.dylib", "*.pyd"]
"pyxdaq.resources.bitfiles" = ["*.bit"]
"pyxdaq.resources.config" = ["*.json"]


[tool.yapfignore]
ignore_patterns = ["pyxdaq/okFrontPanel/*.py"]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = ['ignore:builtin type SwigPy']
