[project]
name = "pyxdaq"
version = "0.5.2"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "dataclass_wizard>=0.36.0",
    "pylibxdaq>=0.7.0,<0.8.0",
    "numpy",
    "rich",
    "tqdm",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/kontex-neuro/pyxdaq"

[tool.setuptools.packages.find]
include = ["pyxdaq", "pyxdaq.*"]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pyxdaq.resources.config" = ["*.json"]

[tool.pytest.ini_options]
testpaths = "tests"

[project.scripts]
xdaq-diagnosis = "pyxdaq.tools.self_diagnosis:main"
